# simsigdec

./: CMakeLists.txt  README.md
core/: CMakeLists.txt  Index.cpp  Index.hpp  Scanner.cpp  Scanner.hpp  config.cpp  config.hpp  types.hpp
core/tests/: CMakeLists.txt  IndexTest.cpp  ScannerTest.cpp  configTest.cpp  stressTest.cpp
core/tests/data/: shell.php  signatures.txt
gui/: CMakeLists.txt  Simsigdec.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  signatures.txt  ui_mainwindow.h
objects/: CMakeLists.txt  Handler.cpp  Handler.hpp  ThreadScanner.cpp  ThreadScanner.hpp
server/: CMakeLists.txt  Connection.cpp  Connection.hpp  Server.cpp  Server.hpp  ThreadScanner.cpp  ThreadScanner.hpp  main.cpp
